# app_server_manager_apv

./: .gitignore  README.md  manage.py  mypy.ini  pyproject.toml  pytest.ini
.github/workflows/: main.yml
APP_SERVER_MANAGER/: asgi.py  context_processors.py  settings.py  urls.py  wsgi.py
accounts/: urls.py  views.py
accounts/middleware/: access_control.py
accounts/templates/: login.html
process_manager/: admin.py  models.py  tests.py  urls.py  utils.py
process_manager/routes/: actions.py  charts.py  exports.py  tables.py  views.py
process_manager/templates/charts/: cpu_chart.html  memory_chart.html  processes_chart.html  snapshots_charts_box.html
process_manager/templates/tables/: kill_log_table.html  process_table.html  process_table_dynamic.html  snapshots_table.html
process_manager/templates/utils/: processes_rows_update.html
process_manager/templates/views/: browse_kill_logs.html  browse_processes.html  browse_snapshots.html
static/css/: basic.css
static/js/: button_utils.js  custom_filters.js  custom_pagination.js  custom_sorting.js  dynamic_table_notifications.js  table_refresh_counter.js
templates/: base.html  base_public.html
