[tool.poetry]
name = "app-server-manager"
version = "0.1.0"
description = "Application Server Manager"
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "APP_SERVER_MANAGER" },
    { include = "process_manager" },
    { include = "accounts" }
]

[tool.poetry.dependencies]
python = "^3.10"
django = "5.1"
psutil = "7.0.0"
openpyxl = "^3.1.2"
django-stubs = "5.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-django = "^4.5.2"
ruff = "^0.1.0"
mypy = "^1.13"
django-stubs = "5.1.3"
types-psutil = "^7.0.0.20250218"
types-openpyxl = "^3.1.5.20250306"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
